Fix portfolio layout shift and style inconsistencies

--- a/styles/style2.css
+++ b/styles/style2.css
@@ -36,7 +36,7 @@ body {
 	color: var(--light-red);
 	font-family: var(--sans-font);
 	font-size: 1em;
-	font-weight: 500;
+	font-weight: bold;
 	text-transform: uppercase;
 	text-decoration: none;
 	display: block;
@@ -90,7 +90,7 @@ body {
 	grid-row: 3;
 	font-family: var(--mono-font);
 	color: var(--off-white);
-	text-align: center;
+	text-align: justify;
 	margin: 1em 0;
 }
 
@@ -216,7 +216,8 @@ body {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	gap: 2em;
-	margin: 2em auto 6em auto;
+	padding: 3em 0 6em 0;
+	margin: 0 auto;
 }
 
 .portfolio__project {
